mobile view fix 1

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   height: 100vh;
-  width: 520px;
+  width: var(--app-width);
+  max-width: 100vw;
   background-color: white;
   padding: 0 4px;
   border-radius: 4px;
