--- a/src/components/avatar.css
+++ b/src/components/avatar.css
@@ -4,6 +4,7 @@
   border-radius: 50%;
   height: 5vmax;
   width: 5vmax;
+  font-size: 1.5vmax;
   max-width: 68px;
   max-height: 68px;
   background-color: lightblue;
