--- a/src/components/inbox-chat.css
+++ b/src/components/inbox-chat.css
@@ -13,7 +13,7 @@
   align-items: center;
   border-bottom: 1px solid #ddd;
   flex-grow: 1;
-  padding: 2vmax 0;
+  padding: 2vmax 4px;
   margin-left: 8px;
 }
 .inbox-chat .info-container .chat-info .user-name {
